# Phoenix-Framework

./: Cargo.toml  README.md
src/: discord.rs  telegram.rs
src/core/: commands.rs  mod.rs  obfuscate.rs
src/modules/: audio.rs  clipboard.rs  desktop.rs  destruct.rs  exec.rs  file_system.rs  gui.rs  help  inject.rs  keylog.rs  mod.rs  persist.rs  privesc.rs  ps.rs  random.rs  screenshot.rs  system.rs  tunnel.rs  user.rs  webcam.rs
src/modules/browsers/: chromium.rs  firefox.rs  mod.rs
src/modules/browsers/DllExtractChromiumSecrets/: DllExtractChromiumSecrets.vcxproj  DllExtractChromiumSecrets.vcxproj.filters  DllHeaders.h  DllMain.cpp
src/modules/browsers/DllExtractChromiumSecrets/Common/: ApiHashing.cpp  Common.cpp  Common.h  Common.vcxitems  Common.vcxitems.filters  Debug.h  FetchSecretFiles.cpp  Obfuscate.hpp  Structures.h
